# hst

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: demo_hst.ipynb
docs/methods/: README.md
docs/models/: README.md
src/hst/: README.md  __init__.py  hst.py  linear_multres.py  linmultres.py  mrw1d.py  nonlinear_multres.py  nonlinmultres.py  wavelet_operators.py
tests/: Burgers_HST_example.py  sdw2_BC_analysis.py  test_wavelet_decomposition.py  validate_wavelet_decomposition.py
