[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "hst"
version = "0.0.1"
authors = [
  { name="Milan Holec", email="homijan@gmail.com" },
]
description = "Heisenberg scattering transformation."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "pywt",
]
[tool.hatch.build.targets.wheel]
packages = [
    "src/hst",
]
[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
[project.urls]
Homepage = "https://github.com/homijan/hst"
Issues = "https://github.com/homijan/hst/issues"
